--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "carbon-components": "^10.16.0",
+    "carbon-components-react": "^7.16.0",
+    "carbon-icons": "^7.0.7",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
@@ -13,7 +16,6 @@
     "tailwindcss": "^1.5.1"
   },
   "scripts": {
-    "prestart": "npx tailwindcss build src/App.css -o src/styles/output.css",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -37,5 +39,8 @@
   "peerDependencies": {
     "firebase": "^7.16.1",
     "ui": "^0.2.4"
+  },
+  "devDependencies": {
+    "node-sass": "^4.14.1"
   }
 }
